DuPont DevSB/src/objects/Initiative_Item__c.object
<CustomObject>
    <description>This Intiative Items object is designed to capture documentation specific to each phase of a marketing strategy initiative.  Phases and SubPhases herein are based on standards defined by DMX (DuPont Marketing Excellence) for Marketing Strategy and Planning.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments for marketing phase</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End of this phase</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>Parent initiative of initiative items</description>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Initiative Items</relationshipLabel>
        <relationshipName>Initiative_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Marketing_Phase__c</fullName>
        <description>Marketing Phases</description>
        <label>Marketing Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Market Assessment</fullName>
                </value>
                <value>
                    <fullName>2-Strategy Development</fullName>
                </value>
                <value>
                    <fullName>3-Plan Development</fullName>
                </value>
                <value>
                    <fullName>4-Plan Execution</fullName>
                </value>
                <value>
                    <fullName>5-Performance Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_SubPhase__c</fullName>
        <description>Marketing Sub Phase</description>
        <label>Marketing SubPhase</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Marketing_Phase__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Channel Overview</fullName>
                </value>
                <value>
                    <fullName>Channel Planning</fullName>
                </value>
                <value>
                    <fullName>Competitive Analysis</fullName>
                </value>
                <value>
                    <fullName>Customer Analysis</fullName>
                </value>
                <value>
                    <fullName>Internal Analysis</fullName>
                </value>
                <value>
                    <fullName>Market/Industry Analysis</fullName>
                </value>
                <value>
                    <fullName>Marketing Communications</fullName>
                </value>
                <value>
                    <fullName>Marketing Deliverables</fullName>
                </value>
                <value>
                    <fullName>Mrktng Communications Overview</fullName>
                </value>
                <value>
                    <fullName>Pricing Overview</fullName>
                </value>
                <value>
                    <fullName>Product Design Overview</fullName>
                </value>
                <value>
                    <fullName>Value Chain Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <description>Objectives for this marketing phase</description>
        <label>Objectives</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Program</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GM Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Beginning of this phase</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_rtf__c</fullName>
        <description>Summary of priority or strategy for this marketing phase (Rich Text)</description>
        <inlineHelpText>Summary of priority or strategy for this marketing phase (may include pics or rich text)</inlineHelpText>
        <label>Summary_</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>Targeted completion date of this phase</description>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Initiative Item</label>
    <nameField>
        <label>Initiative Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiative Items</pluralLabel>
    <recordTypes>
        <fullName>Initiative_Item</fullName>
        <active>true</active>
        <description>Initiative Item Record Type</description>
        <label>Initiative Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>